<resources>
    <string name="app_name">Scheduler</string>
    <string name="question_1">Give this assignment a name.</string>
    <string name="hint_1">e.g. Calc Homework</string>
    <string name="question_2">How many hours do you think this assignment will take?</string>
    <string name="hint_2">e.g. 1, 2, 0.5, etc</string>
    <string name="question_4">When is this assignment due?</string>
    <string name="hint_4">MM/DD/YYYY</string>
    <string name="next">Next</string>
    <string name="success_message">Your assignment has been scheduled in your Google Calendar!</string>
    <string name="another_one">Another Assignment</string>
    <string name="quit">Quit</string>
    <string name="settings">Settings</string>
    <string name="title_activity_nothing">nothing</string>
    <string name="current_id_number">com_example_homework_scheduler_current_id_number</string>
    <string name="list_of_event_keys">com_example_homework_scheduler_current_event_keys</string>
    <string name="delete_event">Delete Event</string>
    <string name="go_back">Back</string>
    <string name="no_events_message">You don\'t have any assignments scheduled yet! Press the plus button to schedule one.</string>
    <string name="your_assignments">Your Assignments</string>
    <string name="home_start_and_end">Homework start and end times</string>
    <string name="max_homework_session">Maximum homework session time</string>
    <string name="num_days_early">Number of days early to finish assignments</string>
    <string name="finished">Finished</string>
    <string name="waiting_message">Just one moment.\n\nYour assignment is being scheduled!</string>
    <string name="oh_no">Oh no!</string>
    <string name="not_enough_time_warning">There\'s not enough time to finish your assignment before it\'s due!\n\nTry adjusting your settings to allow for more time to finish your assignment.</string>
    <string name="these_are_current_settings">These are your current settings. Would you like to change anything for this assignment?</string>
</resources>
