<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/question_4">

    <View
        android:layout_centerInParent="true"
        android:id="@+id/myRectangleView"
        android:layout_width="330dp"
        android:layout_height="605dp"
        android:background="@drawable/question_rectangle"
        android:layout_gravity="center"/>
    <TextView
        android:fontFamily="@font/nunito_regular"
        android:layout_width="275dp"
        android:layout_height="400dp"
        android:text="@string/question_4"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true">
    </TextView>

    <TextView
        android:fontFamily="@font/nunito_regular"
        android:id="@+id/date_text"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:background="@drawable/question_edit_text"
        android:hint="@string/hint_4"
        android:textSize="25sp"/>

    <Button
        android:fontFamily="@font/nunito_bold"
        android:id="@+id/next_question"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:background="@drawable/next_question_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:layout_below="@+id/date_text"
        android:text="@string/next"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:textAllCaps="false"/>

</RelativeLayout>