<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/question_1"
    android:background="#38B1DE"
    android:clickable="true">



        <TextView
            android:layout_above="@id/assignment_title"
            android:layout_width="275dp"
            android:layout_height="200dp"
            android:text="@string/question_1"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:gravity="start"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/nunito_regular">
        </TextView>

        <EditText
            android:id="@+id/assignment_title"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:background="@drawable/question_edit_text"
            android:hint="@string/hint_1"
            android:textSize="25sp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:fontFamily="@font/nunito_regular"
            />

    <Button
        android:id="@+id/next_question"
        android:layout_width="275dp"
        android:layout_height="50dp"
        android:background="@drawable/next_question_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:layout_below="@+id/assignment_title"
        android:text="@string/next"
        android:textSize="25sp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/nunito_light"/>

</RelativeLayout>