<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/oh_no"
    android:clickable="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/myRectangleView"
            android:layout_width="330dp"
            android:layout_height="605dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/oops"
            android:layout_width="275dp"
            android:layout_centerHorizontal="true"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center_vertical"
            android:text="@string/oh_no"
            android:layout_alignTop="@id/myRectangleView"
            android:textSize="31sp"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/warning"
            android:layout_width="275dp"
            android:layout_height="350dp"
            android:layout_below="@+id/oops"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/nunito_regular"
            android:gravity="center_vertical"
            android:text="@string/not_enough_time_warning"
            android:textColor="#FFFFFF"
            android:textSize="25sp"/>


        <Button
            android:id="@+id/quit"
            android:layout_width="275dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/myRectangleView"
            android:layout_marginBottom="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/next_question_button"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/go_back"
            android:textColor="#FFFFFF"
            android:textAllCaps="false"
            android:textSize="25sp" />
    </RelativeLayout>
</RelativeLayout>